[gd_scene load_steps=72 format=2]

[ext_resource path="res://src/Player/Camera2D.gd" type="Script" id=1]
[ext_resource path="res://src/Player/assets/Explosion/1_15.png" type="Texture" id=2]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://src/Utils/ScreenShake/ScreenShake.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Player/assets/Explosion/1_17.png" type="Texture" id=5]
[ext_resource path="res://src/Player/assets/Explosion/1_18.png" type="Texture" id=6]
[ext_resource path="res://src/Player/assets/Explosion/1_11.png" type="Texture" id=7]
[ext_resource path="res://src/Player/assets/Explosion/1_19.png" type="Texture" id=8]
[ext_resource path="res://src/Player/assets/Explosion/1_13.png" type="Texture" id=9]
[ext_resource path="res://src/Player/assets/Explosion/1_16.png" type="Texture" id=10]
[ext_resource path="res://src/Player/Explosion.gd" type="Script" id=11]
[ext_resource path="res://src/Player/assets/Explosion/1_14.png" type="Texture" id=12]
[ext_resource path="res://src/Player/assets/Explosion/1_12.png" type="Texture" id=13]
[ext_resource path="res://src/Player/assets/Explosion/1_6.png" type="Texture" id=14]
[ext_resource path="res://src/Player/assets/Explosion/1_3.png" type="Texture" id=15]
[ext_resource path="res://src/Player/assets/Explosion/1_7.png" type="Texture" id=16]
[ext_resource path="res://src/Player/assets/Jump.png" type="Texture" id=17]
[ext_resource path="res://src/Player/assets/Explosion/1_8.png" type="Texture" id=18]
[ext_resource path="res://src/Player/assets/Explosion/1_9.png" type="Texture" id=19]
[ext_resource path="res://src/Player/assets/Explosion/1_10.png" type="Texture" id=20]
[ext_resource path="res://src/Player/assets/Idle.png" type="Texture" id=21]
[ext_resource path="res://src/Player/assets/Walk02.png" type="Texture" id=22]
[ext_resource path="res://src/Player/assets/Explosion/1_5.png" type="Texture" id=23]
[ext_resource path="res://src/Player/assets/Explosion/1_4.png" type="Texture" id=24]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 2 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 8 ) ],
"loop": true,
"name": "Explosion",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 0, 0, 682, 730 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 932, 818 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 932, 0, 932, 818 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 1864, 0, 932, 818 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 2796, 0, 932, 818 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 3728, 0, 932, 818 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 818, 932, 818 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 932, 818, 932, 818 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 1864, 818, 932, 818 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 2796, 818, 932, 818 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 1636, 932, 818 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 932, 1636, 932, 818 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 1864, 1636, 932, 818 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 2796, 1636, 932, 818 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 2454, 932, 818 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 932, 2454, 932, 818 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 1864, 2454, 932, 818 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 2796, 2454, 932, 818 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 3272, 932, 818 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 932, 3272, 932, 818 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 1864, 3272, 932, 818 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 2796, 3272, 932, 818 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 0, 0, 782, 754 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 782, 0, 782, 754 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 1564, 0, 782, 754 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 2346, 0, 782, 754 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 3128, 0, 782, 754 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 0, 754, 782, 754 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 782, 754, 782, 754 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 1564, 754, 782, 754 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 2346, 754, 782, 754 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 0, 1508, 782, 754 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 782, 1508, 782, 754 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 1564, 1508, 782, 754 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 2346, 1508, 782, 754 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 0, 2262, 782, 754 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 782, 2262, 782, 754 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 1564, 2262, 782, 754 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 2346, 2262, 782, 754 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 0, 3016, 782, 754 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 782, 3016, 782, 754 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 1564, 3016, 782, 754 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 2346, 3016, 782, 754 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "Jump",
"speed": 20.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "Run",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.5, 32.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18.5, 29.5 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ -164.0 ]
}

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -16, 32 )
rotation = -1.5708
scale = Vector2( 1.11798, 1.11798 )
frames = SubResource( 4 )
animation = "Explosion"
speed_scale = 2.0
script = ExtResource( 11 )

[node name="Timer" type="Timer" parent="Explosion"]
wait_time = 0.5
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.38419e-07, 0 )
scale = Vector2( 0.177471, 0.184712 )
frames = SubResource( 1 )
animation = "Run"

[node name="IdleCollision" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, -6.5 )
shape = SubResource( 2 )

[node name="JumpCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1.5, -2.5 )
shape = SubResource( 3 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
zoom = Vector2( 0.75, 0.75 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.1
drag_margin_top = 0.75
drag_margin_right = 0.1
script = ExtResource( 1 )

[node name="ScreenShake" parent="Camera2D" instance=ExtResource( 4 )]

[node name="ShiftTween" type="Tween" parent="Camera2D"]

[connection signal="grounded_updated" from="." to="Camera2D" method="_on_Player_grounded_updated"]
[connection signal="timeout" from="Explosion/Timer" to="Explosion" method="_on_Timer_timeout"]
